deploy/wfcsharp.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wfcsharp
  labels:
    app: wfcsharp
spec:
  selector:
    app: wfcsharp
  ports:
    - protocol: TCP
      port: 5284
      targetPort: 5284
  type: ClusterIP
